--- a/pages/labe.html
+++ b/pages/labe.html
@@ -6,6 +6,6 @@
     <title>Document</title>
   </head>
   <body>
-    <h1>This is Idris project</h1>
+    <h1>This is Idris projects</h1>
   </body>
 </html>
